--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:conversion="clr-namespace:DigimonWorld.Frontend.WPF.Conversion"
-             xmlns:enums="clr-namespace:Generics.Enums;assembly=Generics"
+             xmlns:enums="clr-namespace:Generics.Enums;assembly=Shared"
              xmlns:system="clr-namespace:System;assembly=System.Runtime">
     <Application.Resources>
 
